--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </li>
       </ul>
 
-      <a href="URL_DO_LINK" class="card__button">Pagar</a>
+      <a href="https://kikitty6.github.io/pagamantonwask/" class="card__button">Pagar</a>
 
     </article>
     <!--==================== CARD 2 ====================-->
@@ -91,7 +91,7 @@
         </li>
       </ul>
 
-      <button class="card__button">Pagar</button>
+      <a href="https://kikitty6.github.io/pagamantonwask/" class="card__button">Pagar</a>
     </article>
 
     <!--==================== CARD 3 ====================-->
@@ -135,7 +135,7 @@
         </li>
       </ul>
 
-      <button class="card__button">pagar</button>
+      <a href="https://kikitty6.github.io/pagamantonwask/" class="card__button">Pagar</a>
     </article>
   </div>
 </section>
